@@ -10,6 +10,7 @@
     added Root|Edit udevil.conf to devices menu
     allow edit bookmark to network URL
     corrected Click runs executables pref not saved fixes #84
+    auto-unmount removed media and devices
 0.7.7   2012-05-27:
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
